# mppi_lunar_env

./: README.md  boom.txt
docker_nav_ws/docker_navigation/: Dockerfile  run.sh
docker_nav_ws/nav2_ws/: blank_map.pgm
docker_nav_ws/nav2_ws/install/: local_setup.sh  setup.sh
docker_nav_ws/nav2_ws/install/costmap_queue/share/costmap_queue/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/dwb_core/share/dwb_core/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/dwb_critics/share/dwb_critics/: package.sh
docker_nav_ws/nav2_ws/install/dwb_msgs/share/dwb_msgs/: package.sh
docker_nav_ws/nav2_ws/install/dwb_plugins/share/dwb_plugins/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_amcl/share/nav2_amcl/: package.sh
docker_nav_ws/nav2_ws/install/nav2_behavior_tree/share/nav2_behavior_tree/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_behaviors/lib/nav2_behaviors/: behavior_server
docker_nav_ws/nav2_ws/install/nav2_behaviors/share/nav2_behaviors/: package.sh
docker_nav_ws/nav2_ws/install/nav2_bringup/share/nav2_bringup/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_bt_navigator/lib/nav2_bt_navigator/: bt_navigator
docker_nav_ws/nav2_ws/install/nav2_bt_navigator/share/nav2_bt_navigator/: package.sh
docker_nav_ws/nav2_ws/install/nav2_collision_monitor/lib/nav2_collision_monitor/: collision_monitor
docker_nav_ws/nav2_ws/install/nav2_collision_monitor/share/nav2_collision_monitor/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_common/share/nav2_common/: package.sh
docker_nav_ws/nav2_ws/install/nav2_constrained_smoother/share/nav2_constrained_smoother/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_controller/lib/nav2_controller/: controller_server
docker_nav_ws/nav2_ws/install/nav2_controller/share/nav2_controller/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_core/share/nav2_core/: package.sh
docker_nav_ws/nav2_ws/install/nav2_costmap_2d/lib/nav2_costmap_2d/: nav2_costmap_2d  nav2_costmap_2d_cloud  nav2_costmap_2d_markers
docker_nav_ws/nav2_ws/install/nav2_costmap_2d/share/nav2_costmap_2d/: package.sh
docker_nav_ws/nav2_ws/install/nav2_dwb_controller/share/nav2_dwb_controller/: package.sh
docker_nav_ws/nav2_ws/install/nav2_graceful_controller/share/nav2_graceful_controller/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_lifecycle_manager/lib/nav2_lifecycle_manager/: lifecycle_manager
docker_nav_ws/nav2_ws/install/nav2_lifecycle_manager/share/nav2_lifecycle_manager/: package.sh
docker_nav_ws/nav2_ws/install/nav2_map_server/lib/nav2_map_server/: costmap_filter_info_server
docker_nav_ws/nav2_ws/install/nav2_mppi_controller/share/nav2_mppi_controller/: package.sh
docker_nav_ws/nav2_ws/install/nav2_msgs/share/nav2_msgs/: package.sh
docker_nav_ws/nav2_ws/install/nav2_navfn_planner/share/nav2_navfn_planner/: package.sh
docker_nav_ws/nav2_ws/install/nav2_planner/lib/nav2_planner/: planner_server
docker_nav_ws/nav2_ws/install/nav2_planner/share/nav2_planner/: package.sh
docker_nav_ws/nav2_ws/install/nav2_regulated_pure_pursuit_controller/share/nav2_regulated_pure_pursuit_controller/: package.sh
docker_nav_ws/nav2_ws/install/nav2_rotation_shim_controller/share/nav2_rotation_shim_controller/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_rviz_plugins/share/nav2_rviz_plugins/: local_setup.sh
docker_nav_ws/nav2_ws/install/nav2_smac_planner/share/nav2_smac_planner/: local_setup.sh  package.sh
docker_nav_ws/nav2_ws/install/nav2_smoother/lib/nav2_smoother/: smoother_server
docker_nav_ws/nav2_ws/install/nav2_smoother/share/nav2_smoother/: package.sh
docker_nav_ws/nav2_ws/log/: latest_build
docker_nav_ws/nav2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
docker_nav_ws/nav2_ws/src/custom_msgs/msg/: ObstacleData.msg  Obstacles.msg
docker_nav_ws/nav2_ws/src/navigation2/nav2_mppi_controller/: CMakeLists.txt  critics.xml  package.xml  test_mppic.xml
docker_nav_ws/nav2_ws/src/navigation2/nav2_mppi_controller/include/nav2_mppi_controller/: test_controller.hpp
docker_nav_ws/nav2_ws/src/navigation2/nav2_mppi_controller/include/nav2_mppi_controller/critics/: avoid_slope_critic.hpp
docker_nav_ws/nav2_ws/src/navigation2/nav2_navfn_planner/: test_global_planner_plugin.xml
docker_ros_ws/docker_simulation/: build.sh  entrypoint.sh  run.sh
docker_ros_ws/ros_ws/log/: latest_build
docker_ros_ws/ros_ws/src/grid_map_publisher/: package.xml
docker_ros_ws/ros_ws/src/grid_map_publisher/config/: grid_map_config.yaml
docker_ros_ws/ros_ws/src/grid_map_publisher/src/: grid_map_publisher_node.cpp
docker_ros_ws/ros_ws/src/leo_pose/: package.xml
docker_ros_ws/ros_ws/src/leo_simulator-ros2/: README.md
docker_ros_ws/ros_ws/src/rocks_publisher/: CMakeLists.txt  package.xml
docker_ros_ws/ros_ws/src/rocks_publisher/config/: grid_map_config.yaml
docker_ros_ws/ros_ws/useless files/: MPPI_test.rviz  empty_map_trial.pgm  empty_map_trial.yaml  my_map.yaml
test_docker_nav_ws/docker_navigation/: Dockerfile  build.sh  run.sh
test_docker_nav_ws/nav2_ws/log/: latest_build
test_docker_nav_ws/nav2_ws/src/navigation2/nav2_navfn_planner/: CMakeLists.txt
test_docker_ros_ws/docker_simulation/: Dockerfile  run.sh
test_docker_ros_ws/docker_simulation/ros_ws/install/: local_setup.sh  setup.sh
test_docker_ros_ws/docker_simulation/ros_ws/log/: latest_build
test_docker_ros_ws/ros_ws/: blank_map.yaml  test_blank_map.rviz
test_docker_ros_ws/ros_ws/install/: setup.sh
test_docker_ros_ws/ros_ws/log/: latest_build
test_docker_ros_ws/ros_ws/src/: README.md  instructions.txt
test_docker_ros_ws/ros_ws/src/grid_map_publisher/: CMakeLists.txt
test_docker_ros_ws/ros_ws/src/grid_map_publisher/src/: grid_map_subscriber_node.cpp
test_docker_ros_ws/ros_ws/src/leo_pose/: CMakeLists.txt
test_docker_ros_ws/ros_ws/src/leo_pose/src/: gt_odometry.cpp
test_docker_ros_ws/ros_ws/src/rocks_publisher/src/: rocks_publisher.cpp
test_docker_ros_ws/ros_ws/useless files/: height_map_terrain.csv  my_map.pgm
(+157 files in other folders)
